# talkvault

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  idea.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
bot/: brain.py  config.py  handlers.py  main.py  transcriber.py
bot/tools/: interaction.py  notes.py  registry.py
bot/vault/: git_sync.py  operations.py
deploy/: add-to-existing-droplet.sh  deploy-prod.sh  digital-ocean-setup.sh  setup-new-droplet.sh
docs/superpowers/specs/: 2026-03-11-talkvault-v2-design.md
infrastructure/: docker-compose.prod.yml  docker-compose.yml
tests/: conftest.py  test_brain.py  test_config.py  test_note_tools.py  test_registry_tools.py  test_vault_operations.py
