[project]
name = "talkvault"
version = "0.1.0"
description = "Voice-first Obsidian vault assistant via Telegram"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.6",
    "openai>=1.51.2",
    "python-dotenv>=1.0.1",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
